syntax = "proto3";

option go_package = ".;helloworld";

package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelleReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelleReply {
    string message = 1;
}
